updates to model plots

--- a/analysis/modeling/Phytoplankton-LMM_difference.R.ipynb
+++ b/analysis/modeling/Phytoplankton-LMM_difference.R.ipynb
@@ -1677,189 +1677,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 441,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tab_model(simple_re, simple_intense_scaled_re, show.stat=TRUE, use.viewer=FALSE, dv.labels=c(\"Performance Ratio [all events]\", \"Performance Ratio [intense events]\"), file = \"simple_intense_re.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 442,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Correlation matrix not shown by default, as p = 18 > 12.\n",
-      "Use print(obj, correlation=TRUE)  or\n",
-      "    vcov(obj)        if you need it\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Linear mixed model fit by REML. t-tests use Satterthwaite's method [\n",
-       "lmerModLmerTest]\n",
-       "Formula: formula_re\n",
-       "   Data: mhwPerformance\n",
-       "\n",
-       "REML criterion at convergence: -8033.3\n",
-       "\n",
-       "Scaled residuals: \n",
-       "    Min      1Q  Median      3Q     Max \n",
-       "-7.3509 -0.4540 -0.0408  0.5075  5.6512 \n",
-       "\n",
-       "Random effects:\n",
-       " Groups   Name        Variance Std.Dev.\n",
-       " isolate  (Intercept) 0.02227  0.1492  \n",
-       " Residual             0.01191  0.1091  \n",
-       "Number of obs: 5299, groups:  isolate, 75\n",
-       "\n",
-       "Fixed effects:\n",
-       "                                    Estimate Std. Error         df t value\n",
-       "(Intercept)                        8.681e-02  2.464e-02  7.525e+01   3.524\n",
-       "poly(lat_scaled, 2)1              -1.859e-01  2.240e+00  7.743e+01  -0.083\n",
-       "poly(lat_scaled, 2)2               1.354e+01  3.060e+00  1.641e+02   4.426\n",
-       "sst_scaled                         1.490e-01  2.666e-02  1.127e+03   5.588\n",
-       "seasonspring                       1.901e-02  4.926e-03  5.204e+03   3.858\n",
-       "seasonsummer                      -1.075e-01  4.643e-03  5.204e+03 -23.156\n",
-       "seasonwinter                       6.306e-02  5.093e-03  5.203e+03  12.382\n",
-       "poly(lat_scaled, 2)1:sst_scaled    1.458e+00  1.219e+00  8.086e+01   1.196\n",
-       "poly(lat_scaled, 2)2:sst_scaled    1.963e+00  1.276e+00  8.956e+01   1.539\n",
-       "poly(lat_scaled, 2)1:seasonspring -1.808e-02  4.190e-01  5.202e+03  -0.043\n",
-       "poly(lat_scaled, 2)2:seasonspring -1.206e+00  9.515e-01  5.203e+03  -1.267\n",
-       "poly(lat_scaled, 2)1:seasonsummer -3.311e+00  3.893e-01  5.206e+03  -8.504\n",
-       "poly(lat_scaled, 2)2:seasonsummer -1.075e+00  8.924e-01  5.204e+03  -1.205\n",
-       "poly(lat_scaled, 2)1:seasonwinter  1.107e+00  4.229e-01  5.202e+03   2.617\n",
-       "poly(lat_scaled, 2)2:seasonwinter  1.044e+00  9.616e-01  5.202e+03   1.085\n",
-       "sst_scaled:seasonspring           -1.302e-02  1.368e-02  5.203e+03  -0.952\n",
-       "sst_scaled:seasonsummer           -4.836e-02  1.280e-02  5.205e+03  -3.778\n",
-       "sst_scaled:seasonwinter            3.012e-02  1.399e-02  5.202e+03   2.153\n",
-       "                                  Pr(>|t|)    \n",
-       "(Intercept)                       0.000728 ***\n",
-       "poly(lat_scaled, 2)1              0.934067    \n",
-       "poly(lat_scaled, 2)2              1.74e-05 ***\n",
-       "sst_scaled                        2.88e-08 ***\n",
-       "seasonspring                      0.000116 ***\n",
-       "seasonsummer                       < 2e-16 ***\n",
-       "seasonwinter                       < 2e-16 ***\n",
-       "poly(lat_scaled, 2)1:sst_scaled   0.235062    \n",
-       "poly(lat_scaled, 2)2:sst_scaled   0.127413    \n",
-       "poly(lat_scaled, 2)1:seasonspring 0.965588    \n",
-       "poly(lat_scaled, 2)2:seasonspring 0.205047    \n",
-       "poly(lat_scaled, 2)1:seasonsummer  < 2e-16 ***\n",
-       "poly(lat_scaled, 2)2:seasonsummer 0.228383    \n",
-       "poly(lat_scaled, 2)1:seasonwinter 0.008906 ** \n",
-       "poly(lat_scaled, 2)2:seasonwinter 0.277783    \n",
-       "sst_scaled:seasonspring           0.341364    \n",
-       "sst_scaled:seasonsummer           0.000160 ***\n",
-       "sst_scaled:seasonwinter           0.031394 *  \n",
-       "---\n",
-       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "summary(simple_re)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 443,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Scale for 'y' is already present. Adding another scale for 'y', which will\n",
-      "replace the existing scale.\n",
-      "Scale for 'y' is already present. Adding another scale for 'y', which will\n",
-      "replace the existing scale.\n",
-      "Warning message:\n",
-      "“Removed 3 row(s) containing missing values (geom_path).”"
-     ]
-    }
-   ],
-   "source": [
-    "png(\"./lat_season_all_perf_differenc.png\", width=1440, height=700, res=180)\n",
-    "\n",
-    "seas = plot(ggeffect(simple_re, terms='season')) + \n",
-    "    baseline_hline + \n",
-    "    xlab(\"Season\") +\n",
-    "    ylab(\"Performance Difference\")  +\n",
-    "    ggtitle(\"A) Season\") + \n",
-    "    ylim(-0.5, 0.5)\n",
-    "\n",
-    "\n",
-    "\n",
-    "seaslat = plot(ggeffect(simple_re, terms='lat_scaled')) +\n",
-    "    baseline_hline +\n",
-    "    xlab(\"Latitude [scaled]\") +\n",
-    "    ylab(\"Performance Difference\")  +\n",
-    "    ggtitle(\"B) Latitude\") + \n",
-    "    ylim(-0.5, 0.5)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "grid.arrange(seas, seaslat, nrow=1, widths=c(1,1.3))\n",
-    "# dev.off()\n",
-    "# seaslat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 444,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in anova.merMod(simple_re, simple_intense_re): models were not all fitted to the same size of dataset\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in anova.merMod(simple_re, simple_intense_re): models were not all fitted to the same size of dataset\nTraceback:\n",
-      "1. anova(simple_re, simple_intense_re)",
-      "2. anova.lmerModLmerTest(simple_re, simple_intense_re)",
-      "3. NextMethod()",
-      "4. anova.merMod(simple_re, simple_intense_re)",
-      "5. stop(\"models were not all fitted to the same size of dataset\")"
-     ]
-    }
-   ],
-   "source": [
-    "anova(simple_re, simple_intense_re)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "png(\"./compare_coefs_perf_difference.png\", width=1440, height=950, res=180)\n",
-    "simple_coefs = plot_model(simple_re, ci.lvl=NA,  show.values = TRUE, value.offset=.4) + ylim(-4, 4) + ggtitle(\"A) All MHWs\")\n",
-    "intense_coefs = plot_model(simple_intense_scaled_re,show.values = TRUE, value.offset=.4, ci.lvl=NA)+ ylim(-4, 4) + theme(axis.text.y = element_blank()) + ggtitle(\"B) Intense MHWs\")\n",
-    "grid.arrange(simple_coefs, intense_coefs, nrow=1, widths=c(2., 1) )\n",
-    "dev.off()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1868,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,18 +1695,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 454,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Linear mixed model fit by REML. t-tests use Satterthwaite's method [\n",
+       "lmerModLmerTest]\n",
+       "Formula: performance_diff_mean ~ (abslat + sst_scaled)^2 + (1 | isolate)\n",
+       "   Data: winter_only\n",
+       "\n",
+       "REML criterion at convergence: -3908.4\n",
+       "\n",
+       "Scaled residuals: \n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-5.8243 -0.3722  0.0080  0.3138  5.2430 \n",
+       "\n",
+       "Random effects:\n",
+       " Groups   Name        Variance Std.Dev.\n",
+       " isolate  (Intercept) 0.021913 0.14803 \n",
+       " Residual             0.001287 0.03588 \n",
+       "Number of obs: 1141, groups:  isolate, 75\n",
+       "\n",
+       "Fixed effects:\n",
+       "                    Estimate Std. Error         df t value Pr(>|t|)    \n",
+       "(Intercept)       -8.181e-04  4.816e-02  1.777e+02  -0.017 0.986466    \n",
+       "abslat             5.187e-03  1.407e-03  1.697e+02   3.687 0.000306 ***\n",
+       "sst_scaled        -4.865e-02  3.358e-02  3.815e+02  -1.449 0.148191    \n",
+       "abslat:sst_scaled  2.736e-03  7.421e-04  1.272e+02   3.687 0.000335 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Correlation of Fixed Effects:\n",
+       "            (Intr) abslat sst_sc\n",
+       "abslat      -0.904              \n",
+       "sst_scaled  -0.481  0.303       \n",
+       "abslt:sst_s  0.118  0.129 -0.814"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "summary(winter_re)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 452,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Linear mixed model fit by REML. t-tests use Satterthwaite's method [\n",
+       "lmerModLmerTest]\n",
+       "Formula: performance_diff_mean ~ (abslat + sst_scaled)^2 + (1 | isolate)\n",
+       "   Data: summer_only\n",
+       "\n",
+       "REML criterion at convergence: -4375.4\n",
+       "\n",
+       "Scaled residuals: \n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-7.0612 -0.3711 -0.0288  0.3465  6.4595 \n",
+       "\n",
+       "Random effects:\n",
+       " Groups   Name        Variance Std.Dev.\n",
+       " isolate  (Intercept) 0.032416 0.18004 \n",
+       " Residual             0.005367 0.07326 \n",
+       "Number of obs: 2003, groups:  isolate, 75\n",
+       "\n",
+       "Fixed effects:\n",
+       "                    Estimate Std. Error         df t value Pr(>|t|)   \n",
+       "(Intercept)       -1.818e-01  5.825e-02  1.716e+02  -3.121  0.00212 **\n",
+       "abslat             3.439e-03  1.692e-03  1.675e+02   2.033  0.04362 * \n",
+       "sst_scaled         1.080e-01  4.239e-02  2.940e+02   2.548  0.01133 * \n",
+       "abslat:sst_scaled -2.160e-03  9.399e-04  1.075e+02  -2.298  0.02349 * \n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Correlation of Fixed Effects:\n",
+       "            (Intr) abslat sst_sc\n",
+       "abslat      -0.900              \n",
+       "sst_scaled  -0.481  0.290       \n",
+       "abslt:sst_s  0.150  0.108 -0.837"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "summer_only = mhwPerformance %>% filter(season == \"summer\")\n",
     "summer_re = lmer(performance_diff_mean ~ (abslat + sst_scaled)^2 + (1 | isolate), data=summer_only, )\n",
@@ -1898,16 +1795,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 451,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Linear mixed model fit by REML. t-tests use Satterthwaite's method [\n",
+       "lmerModLmerTest]\n",
+       "Formula: performance_diff_mean ~ (abslat + sst_scaled)^2 + (1 | isolate)\n",
+       "   Data: spring_only\n",
+       "\n",
+       "REML criterion at convergence: -2613.3\n",
+       "\n",
+       "Scaled residuals: \n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-7.3284 -0.2555  0.0049  0.2718  6.8615 \n",
+       "\n",
+       "Random effects:\n",
+       " Groups   Name        Variance Std.Dev.\n",
+       " isolate  (Intercept) 0.018823 0.1372  \n",
+       " Residual             0.006773 0.0823  \n",
+       "Number of obs: 1363, groups:  isolate, 75\n",
+       "\n",
+       "Fixed effects:\n",
+       "                    Estimate Std. Error         df t value Pr(>|t|)  \n",
+       "(Intercept)       -2.208e-02  6.034e-02  1.766e+02  -0.366   0.7149  \n",
+       "abslat             3.918e-03  1.734e-03  1.652e+02   2.259   0.0252 *\n",
+       "sst_scaled        -1.478e-02  4.590e-02  2.218e+02  -0.322   0.7478  \n",
+       "abslat:sst_scaled  1.244e-03  7.886e-04  9.408e+01   1.577   0.1182  \n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Correlation of Fixed Effects:\n",
+       "            (Intr) abslat sst_sc\n",
+       "abslat      -0.942              \n",
+       "sst_scaled  -0.713  0.596       \n",
+       "abslt:sst_s  0.284 -0.085 -0.778"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "spring_only = mhwPerformance %>% filter(season == \"spring\")\n",
+    "spring_re = lmer(performance_diff_mean ~ (abslat + sst_scaled)^2 + (1 | isolate), data=spring_only, )\n",
+    "summary(spring_re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 461,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Linear mixed model fit by REML. t-tests use Satterthwaite's method [\n",
+       "lmerModLmerTest]\n",
+       "Formula: performance_diff_mean ~ (abslat + sst_scaled)^2 + (1 | isolate)\n",
+       "   Data: fall_only\n",
+       "\n",
+       "REML criterion at convergence: -2220.3\n",
+       "\n",
+       "Scaled residuals: \n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-7.8919 -0.3296  0.0008  0.3554  5.4018 \n",
+       "\n",
+       "Random effects:\n",
+       " Groups   Name        Variance Std.Dev.\n",
+       " isolate  (Intercept) 0.016241 0.12744 \n",
+       " Residual             0.002272 0.04767 \n",
+       "Number of obs: 792, groups:  isolate, 75\n",
+       "\n",
+       "Fixed effects:\n",
+       "                    Estimate Std. Error         df t value Pr(>|t|)  \n",
+       "(Intercept)       -2.539e-02  5.468e-02  1.862e+02  -0.464   0.6430  \n",
+       "abslat             3.258e-03  1.577e-03  1.740e+02   2.066   0.0403 *\n",
+       "sst_scaled        -2.935e-02  4.141e-02  2.373e+02  -0.709   0.4792  \n",
+       "abslat:sst_scaled  1.216e-03  7.236e-04  9.740e+01   1.680   0.0962 .\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Correlation of Fixed Effects:\n",
+       "            (Intr) abslat sst_sc\n",
+       "abslat      -0.940              \n",
+       "sst_scaled  -0.701  0.580       \n",
+       "abslt:sst_s  0.270 -0.068 -0.777"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fall_only = mhwPerformance %>% filter(season == \"fall\")\n",
+    "fall_re = lmer(performance_diff_mean ~ (abslat + sst_scaled)^2 + (1 | isolate), data=fall_only, )\n",
+    "summary(fall_re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 463,
    "metadata": {},
    "outputs": [],
    "source": [
     "tab_model(\n",
     "    winter_re,\n",
+    "    spring_re,\n",
     "    summer_re,\n",
+    "    fall_re,  \n",
     "    show.stat=TRUE,\n",
     "    use.viewer=FALSE, \n",
-    "    dv.labels=c(\"Performance Ratio [all events]\", \"Performance Ratio [intense events]\"), \n",
+    "    dv.labels=c(\"Winter Only\", \"Spring Only\", \"Summer Only\", \"Autumn Only\"), \n",
     "    file = \"compare_season_models.html\"\n",
     ")"
    ]
